--- a/Front/site.css
+++ b/Front/site.css
@@ -1,5 +1,6 @@
 .corpo{
-     font-family: "Georgia", serif;
+    font-family: "Georgia", serif; !important
+    text-decoration: none;
 }
 /* ------------------Menu---------------- */
 #container-navbar {
@@ -20,6 +21,8 @@
 }
 .navbar{
     margin: 0;
+    border-color: #1A237E;
+    border-radius: 0;
 }
 #nb #container-navbar .collapse .nav {
     text-align: center;
@@ -35,6 +38,7 @@
 #nb a:hover, a.active a:hover{
     color: white;
     background-color: #3F51B5;
+    text-decoration: none;
 }
 .menu-login{
     font-size: 1em;
@@ -55,6 +59,9 @@
 .dropdown-menu li a{
     color: white;
 }
+.dropdown-menu a.active{
+    background-color: #1A237E;
+}
 /* ------------------Commodities---------------- */
 .container-commo, .container-graphi{
     font-family: "Georgia", serif;
@@ -66,7 +73,7 @@
 }
 .barraAzul{
     background-color: #3949ab;
-    color: #fdd835;
+    color: white;
     text-align: center;
     padding-top: 3px;
     padding-bottom: 3px;
@@ -75,15 +82,112 @@
     opacity: 0.7;
 }
 .intro{
-    background-color: #263238;
+    background-color: #334191;
     color: white;
     padding: 0 4% 0 4%;
     text-align: justify;
     text-justify: inter-word;
 }
 .container-page-commodities{
-    margin-left: 4%;
+    padding: 0 2%;
+    text-decoration: none;
 }
 .container-page-commodities h1{
     margin-bottom: 20px;
+}
+.grey{
+    background-color: none;
+    border-radius: 5px;
+    color: black;
+    padding: 5px 15px;
+    text-decoration: none;
+}
+.box{
+    margin-bottom: 20px;
+    text-decoration: none;
+    padding: 0 20px;
+}
+.box a{
+    text-decoration: none;
+}
+.commo-tex{
+    font-size: 1.1em;
+}
+/* ----------------Páginas individuais Informações -------- */
+.commo-name{
+    font-size: 3.6em;
+    margin-left: 40px;
+}
+.panel-heading .accordion-toggle {
+    text-decoration: none !important;
+}
+.panel-heading .accordion-toggle:after {
+    /* symbol for "opening" panels */
+    font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
+    content: "\e114";    /* adjust as needed, taken from bootstrap.css */
+    float: right;        /* adjust as needed */
+    color: white;         /* adjust as needed */
+}
+.panel-heading .accordion-toggle.collapsed:after {
+    /* symbol for "collapsed" panels */
+    content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+}
+.panel-title{
+    font-size: 1.5em;   
+}
+.panel-heading{
+    background-color: #3F51B5 !important;
+    color: white !important;
+}
+.panel-body{
+    font-size: 1.2em;   
+}
+.container-prod{
+    padding: 0 45px;   
+}
+#infoTable{
+    border-collapse: collapse;
+    width: 100%;
+    border: none;
+}
+
+#infoTable td, #infoTable th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+    border-left: none;
+    border-right: none;
+}
+/* ----------------Tabela do Ajuste Diário-------- */
+.formAjuste input[type=date] {
+    border-radius: 3px;
+    box-shadow: inset 0;
+    border: 1px solid #ccc;
+    width: 20%;
+    margin: 0 5px 20px 5px;
+    padding: 8px;
+}
+.btnBusca{
+    color: white;
+    background-color: dodgerblue;
+    border: none;
+    padding: 8px;
+    border-radius: 3px;
+}
+#ajusteTable{
+    border-collapse: collapse;
+    width: 100%;
+    border-radius: 3px;
+}
+#ajusteTable th{
+    border: 1px solid #dddddd;
+    background-color: #3F51B5;
+    text-align: left;
+    padding: 8px;
+    color: white;
+}
+#ajusteTable td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
 }
