--- a/flask/app/templates/commodities.html
+++ b/flask/app/templates/commodities.html
@@ -59,77 +59,90 @@
         </div>
     </div>
     <!-- --------------------------Commodities -------------------------- -->
-    <div class="container-page-commodities" >
+    
+     <div class="container-page-commodities" >
         <h1>Ajuste do Pregão Diário</h1>
-        
-                <div class="box">
-                    <h4>Boi Gordo</h4>
+        <div class="row">
+            <div class="col-sm-6 box">
                     <div class="row grey">
-                        <div class="col-sm-3" style="padding: 0;">
-                            <img src="../static/imagens//Boi.png" style="width:90%;">
-                            <a>Saiba Mais</a>
-                        </div>
-                       
-                        <div class="col-sm-9 commo-tex" >
-                            <p><b>Objeto de negociação:</b> Bovinos machos, com 16 arrobas líquidas ou mais de carcaça e idade máxima de 42 meses.</p>
-                            <p><b>Código de negociação:</b> BGI.</p>
-                            <p><b>Tamanho do contrato:</b> 30 arrobas líquidas.</p>
-                            <p><b>Cotação:</b> Reais por arroba líquida, com duas casas decimais.</p>
-                            <p><b>Meses de vencimento:</b> Todos os meses.</p>
-                        </div>
+                        <a href="boi.html">
+                            <div class="col-sm-5" style="padding: 0;">
+                                <h4>Boi Gordo</h4>
+                                <img src="../static/imagens/Boi.png" style="width:90%;">
+                                <h4>Saiba Mais</h4>
+                            </div>
+                       </a>
+                    <div class="col-sm-7 commo-tex" style="padding: 35px 0;">
+                        <p><b>Objeto de negociação:</b> Bovinos machos, com 16 arrobas líquidas ou mais de carcaça e idade máxima de 42 meses.</p>
+                        <p><b>Código de negociação:</b> BGI.</p>
+                        <p><b>Tamanho do contrato:</b> 30 arrobas líquidas.</p>
+                        <p><b>Cotação:</b> Reais por arroba líquida, com duas casas decimais.</p>
+                        <p><b>Meses de vencimento:</b> Todos os meses.</p>
+                        <br><br>
                     </div>
-                </div> 
-                <div class="box">
+                </div>
+            </div>
+            
+            <div class="col-sm-6 box">
                     <div class="row grey">
-                        <div class="col-sm-3" style="padding: 0;">
+                    <a href="cafe.html">    
+                        <div class="col-sm-5" style="padding: 0;">
                             <h4>Café Arábica 4/5</h4>
-                            <img src="../static/imagens//Cafe.png" style="width:90%;">
+                            <img src="../static/imagens/Cafe.png" style="width:90%;">
                             <h4>Saiba Mais</h4>
                         </div>
-                       
-                        <div class="col-sm-9s commo-tex" style="padding: 25px 0;">
-                            <p><b>Objeto de negociação:</b> Bovinos machos, com 16 arrobas líquidas ou mais de carcaça e idade máxima de 42 meses.</p>
-                            <p><b>Código de negociação:</b> BGI.</p>
-                            <p><b>Tamanho do contrato:</b> 30 arrobas líquidas.</p>
-                            <p><b>Cotação:</b> Reais por arroba líquida, com duas casas decimais.</p>
-                            <p><b>Meses de vencimento:</b> Todos os meses.</p>
+                    </a>
+                        <div class="col-sm-7 commo-tex" style="padding: 35px 0;">
+                            <p><b>Objeto de negociação:</b> Café cru, em grão, de produção brasileira, coffea arabica, tipo 4-25 (4/5).</p>
+                            <p><b>Código de negociação:</b> ICF.</p>
+                            <p><b>Tamanho do contrato:</b> 100 sacas de 60kg líquidos (equivalentes a 6 toneladas métricas).</p>
+                            <p><b>Cotação:</b> Dólares dos Estados Unidos por saca, com duas casas decimais.</p>
+                            <p><b>Meses de vencimento:</b> Março, maio, julho, setembro e dezembro.</p>
                         </div>
                     </div>
-                </div>    
-                <div class="box">
+            </div>
+        </div>    
+        <div class="row">
+             <div class="col-sm-6 box">
                     <div class="row grey">
+                     <a href="milho.html">
                         <div class="col-sm-5" style="padding: 0;">
                             <h4>Milho</h4>
-                            <img src="../static/imagens//Milho.png" style="width:90%;">
+                            <img src="../static/imagens/Milho.png" style="width:90%;">
                             <h4>Saiba Mais</h4>
                         </div>
-                       
-                        <div class="col-sm-7 commo-tex" style="padding: 25px 0;">
-                            <p><b>Objeto de negociação:</b> Bovinos machos, com 16 arrobas líquidas ou mais de carcaça e idade máxima de 42 meses.</p>
-                            <p><b>Código de negociação:</b> BGI.</p>
-                            <p><b>Tamanho do contrato:</b> 30 arrobas líquidas.</p>
-                            <p><b>Cotação:</b> Reais por arroba líquida, com duas casas decimais.</p>
-                            <p><b>Meses de vencimento:</b> Todos os meses.</p>
-                        </div>
+                    </a>
+                    <div class="col-sm-7 commo-tex" style="padding: 35px 0;">
+                        <p><b>Objeto de negociação:</b>	Milho em grão a granel, com odor e aspectos normais, duro ou semiduro e amarelo.</p>
+                        <p><b>Código de negociação:</b> CCM.</p>
+                        <p><b>Tamanho do contrato:</b> 450 sacas de 60kg líquidos (equivalentes a 27 toneladas métricas).</p>
+                        <p><b>Cotação:</b> 	Reais por saca, com duas casas decimais.</p>
+                        <p><b>Meses de vencimento:</b> Janeiro, março, maio, julho, agosto, setembro e novembro.</p>
                     </div>
-                </div>    
-                <div class="box">
+                </div>
+            </div>
+            
+            <div class="col-sm-6 box">
+               
                     <div class="row grey">
+                    <a href="soja.html">
                         <div class="col-sm-5" style="padding: 0;">
                             <h4>Soja</h4>
-                            <img src="../static/imagens//Soja.png" style="width:90%;">
+                            <img src="../static/imagens/Soja.png" style="width:90%;">
                             <h4>Saiba Mais</h4>
                         </div>
-                       
-                        <div class="col-sm-7 commo-tex" style="padding: 25px 0;">
-                            <p><b>Objeto de negociação:</b> Bovinos machos, com 16 arrobas líquidas ou mais de carcaça e idade máxima de 42 meses.</p>
-                            <p><b>Código de negociação:</b> BGI.</p>
-                            <p><b>Tamanho do contrato:</b> 30 arrobas líquidas.</p>
-                            <p><b>Cotação:</b> Reais por arroba líquida, com duas casas decimais.</p>
-                            <p><b>Meses de vencimento:</b> Todos os meses.</p>
-                        </div>
+                    </a>
+                    <div class="col-sm-7 commo-tex" style="padding: 35px 0;">
+                        <p><b>Objeto de negociação:</b> Soja em grão a granel tipo exportação.</p>
+                        <p><b>Código de negociação:</b> SFI.</p>
+                        <p><b>Tamanho do contrato:</b>450 sacas de 60kg líquidos (equivalentes a 27 toneladas métricas).s</p>
+                        <p><b>Cotação:</b> Dólares dos Estados Unidos por saca, com duas casas decimais.</p>
+                        <p><b>Meses de vencimento:</b>Março, abril, maio, junho, julho, agosto, setembro e novembro.</p>
+                        <br>
                     </div>
-                </div>   
+                </div>
+            </div>    
+        </div>
     </div>
 </body>
 </html>
