--- a/flask/app/templates/boi.html
+++ b/flask/app/templates/boi.html
@@ -46,7 +46,7 @@
 </nav>
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
-        <img src="../static/imagens/milhoBanner.jpeg" style="opacity: 0.5; width: 100%">
+        <img src="../static/imagens/boiBanner.png" style="width: 100%">
             <h1 class="commo-name">Boi Gordo</h1>
     </div>
     <!-- --------------------------Boi -------------------------- -->
