--- a/flask/app/templates/cafe.html
+++ b/flask/app/templates/cafe.html
@@ -46,7 +46,7 @@
 </nav>
      <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
-        <img src="../static/imagens/milhoBanner.jpeg" style="opacity: 0.5; width: 100%">
+        <img src="../static/imagens/cafeBanner.png" style="width: 100%">
             <h1 class="commo-name">Café</h1>
     </div>
     <!-- --------------------------Café -------------------------- -->
