--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
     <head>
-        <title>CPA-Home</title>
+        <title>CPA-Milho</title>
           <meta charset="utf-8">
           <meta name="viewport" content="width=device-width, initial-scale=1">
           <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -137,9 +137,9 @@
         </form>
         <table id="ajusteTable">
             <tr>
-                <th>Código</th>
-                <th>Data</th>
-                <th>Vencimento</th>
+                <th style="text-align: center">Código</th>
+                <th style="text-align: center">Data</th>
+                <th style="text-align: center">Vencimento</th>
                 <th>Preço do Ajuste Anterior</th>
                 <th>Preço do Ajuste Atual</th>
                 <th>Variação</th>
@@ -149,9 +149,9 @@
             </tr>
              {%for m in data%}
                 <tr>
-                    <td>{{m.codigo}}</td>
-                    <td>{{m.data}}</td>
-                    <td>{{m.vencimento}}</td>
+                    <td style="text-align: center">{{m.codigo}}</td>
+                    <td style="text-align: center">{{m.data}}</td>
+                    <td style="text-align: center">{{m.vencimento}}</td>
                     <td>{{m.ajuste_anterior}}</td>
                     <td>{{m.ajuste_atual}}</td>
                     <td>{{m.variacao}}</td>
