--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -140,12 +140,12 @@
                 <th style="text-align: center">Código</th>
                 <th style="text-align: center">Data</th>
                 <th style="text-align: center">Vencimento</th>
-                <th>Preço do Ajuste Anterior</th>
-                <th>Preço do Ajuste Atual</th>
-                <th>Variação</th>
+                <th>Preço do Ajuste Anterior (R$)</th>
+                <th>Preço do Ajuste Atual (R$)</th>
+                <th>Variação (R$)</th>
                 <th>Valor do Ajuste por Contrato</th>
                 <th>Número de Contratos</th>
-                <th>Volume</th>
+                <th>Volume (R$)</th>
             </tr>
              {%for m in data%}
                 <tr>
