--- a/flask/app/templates/cafe.html
+++ b/flask/app/templates/cafe.html
@@ -140,12 +140,12 @@
                 <th style="text-align: center">Código</th>
                 <th style="text-align: center">Data</th>
                 <th style="text-align: center">Vencimento</th>
-                <th>Preço do Ajuste Anterior</th>
-                <th>Preço do Ajuste Atual</th>
-                <th>Variação</th>
+                <th>Preço do Ajuste Anterior (U$)</th>
+                <th>Preço do Ajuste Atual (U$)</th>
+                <th>Variação (U$)</th>
                 <th>Valor do Ajuste por Contrato</th>
                 <th>Número por Contrato</th>
-                <th>Volume</th>
+                <th>Volume (U$)</th>
             </tr>
             {%for m in data%}
                 <tr>
