--- a/flask/app/templates/boi.html
+++ b/flask/app/templates/boi.html
@@ -144,7 +144,7 @@
                 <th>Variação (R$)</th>
                 <th>Valor do Ajuste por Contrato</th>
                 <th>Número por Contrato</th>
-                <th>Volume (R$)</th>
+                <th>Volume</th>
             </tr>
             {%for m in data%}
                 <tr>
