--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -144,7 +144,7 @@
                 <th>Variação (R$)</th>
                 <th>Valor do Ajuste por Contrato</th>
                 <th>Número de Contratos</th>
-                <th>Volume (R$)</th>
+                <th>Volume</th>
             </tr>
              {%for m in data%}
                 <tr>
