--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -156,7 +156,7 @@
                     <td>{{'{:.2f}'.format(m.variacao)}}</td>
                     <td>{{'{:.2f}'.format(m.valor_contrato)}}</td>
                     <td>{{m.contratos}}</td>
-                    <td>{{m.volume}}</td>
+                    <td>{{'{:.2f}'.format(m.volume)}}</td>                
                 </tr>
             {% endfor %}
         </table>
