--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -1,6 +1,7 @@
 .corpo{
     font-family: "Georgia", serif; !important
     text-decoration: none;
+    text-align: justify;
 }
 /* ------------------Menu---------------- */
 #container-navbar {
