--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -6,17 +6,24 @@
 /* ------------------Menu---------------- */
 #container-navbar {
     background: #283593;
-    padding-left: 4%;
+    padding-left: 2%;
     padding-right: 2%;
     font-family: "Georgia", serif;
 }
-.navbar-brand > h3{
+.navbar-brand{
+    padding: 5px;
+    padding-right: 15px;
+}
+.navbar-header .navbar-brand > h3{
     color: white;
     font-size: 1.4em;
-    text-align: center;
-    padding-top: 0%;
-    margin-top: 0%;
+    padding: 0%;
+    margin-left: 50px;
+    vertical-align: top !important;
+    margin: 0%
+        
 }
+
 .navbar-left{
     font-size: 1.3em;
 }
@@ -207,4 +214,94 @@
     border: 1px solid #dddddd;
     padding: 8px;
     text-align: right;
+}
+/* ----------------Login-------- */
+.loginBody{
+    background-image: url("../imagens/fundo.jpg");
+    margin-left: auto;
+    margin-right: auto;
+    vertical-align: middle;
+    width: 100%;
+    padding: auto;
+    background-size: cover;
+    font-family: geral;
+}
+
+/* Full-width inputs */
+.loginBody input[type=text], .loginBody input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+.loginBody button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+/* Add a hover effect for buttons */
+.loginBody button:hover {
+    opacity: 0.8;
+}
+
+/* Extra style for the cancel button (red) */
+.loginBody .cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #F57C00;
+}
+.loginBody .cancel{
+    width: auto;
+    position: relative;
+    float: right;
+    padding: 10px 18px;
+    background-color: #c62828;
+}
+.cancel a{
+    color: white;
+    text-decoration: none;
+}
+.logoLogin{
+    padding: 30px;
+}
+/* Center the avatar image inside this container */
+.loginBody .imgcontainer {
+    text-align: center;
+}
+
+/* Avatar image */
+.loginBody img.avatar {
+    max-width: 20%;
+    width: 10%;
+    height: auto;
+
+}
+/* Add padding to containers */
+.loginBody .containerBox {
+    background-color: #fff;
+    padding: 16px;
+    vertical-align:auto;
+    margin: auto;
+    width: 40%;
+}
+
+/* The "Forgot password" text */
+.loginBody span.psw {
+    float: right;
+}
+.loginBody h1 {
+    text-align: center;
+    color: white;
+    font-size: 5em;
+    margin-bottom: 0;
+    margin-top: 0px;
 }
