--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -19,10 +19,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-        <div class = "navbar-brand">
-            <h3>CPA <img src="" class="logo" width="60">
+        <a class = "navbar-brand">
+            <h3><img src="../static/imagens/logo.png" class="logo" width="40"> CPA
             </h3>
-        </div>
+        </a>
     </div>
    <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav navbar-left">
@@ -38,7 +38,7 @@
       </ul>
        <ul class="nav navbar-nav navbar-right">
             <li class="menu-login"><a href="#"><span class="glyphicon glyphicon-user" ></span> Sign Up</a></li>
-            <li class="menu-login"><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </div>
   </div>
