--- a/flask/app/templates/milho.html
+++ b/flask/app/templates/milho.html
@@ -19,10 +19,10 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-         <a class = "navbar-brand">
+          <div class = "navbar-brand">
             <h3><img src="../static/imagens/logo.png" class="logo" width="40"> CPA
             </h3>
-        </a>
+        </div>
     </div>
    <div class="collapse navbar-collapse" id="myNavbar">
     <ul class="nav navbar-nav navbar-left">
