--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -37,7 +37,7 @@
         <li><a href="analytics.html">Analytics</a></li>
       </ul>
        <ul class="nav navbar-nav navbar-right">
-            <li class="menu-login"><a href="#"><span class="glyphicon glyphicon-user" ></span> Sign Up</a></li>
+           <li class="menu-login" class="dropdown"><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
             <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
         </ul>
     </div>
