--- a/flask/app/static/css/main.css
+++ b/flask/app/static/css/main.css
@@ -179,12 +179,21 @@
     border-left: none;
     border-right: none;
 }
-/* ----------------Tabela do Ajuste Diário-------- */
+/* ----------------Tabela do Ajuste Diário----------------------------------------------- */
 .formAjuste input[type=date] {
     border-radius: 3px;
     box-shadow: inset 0;
     border: 1px solid #ccc;
-    width: 20%;
+    width: 10%;
+    margin: 0 5px 20px 5px;
+    padding: 8px;
+}
+.formSelec{
+    background-color: white;
+    border-radius: 3px;
+    box-shadow: inset 0;
+    border: 1px solid #ccc;
+    width: 10%;
     margin: 0 5px 20px 5px;
     padding: 8px;
 }
@@ -215,7 +224,7 @@
     padding: 8px;
     text-align: right;
 }
-/* ----------------Login-------- */
+/* ----------------Login----------------------------------------------------------- */
 .loginBody{
     background-image: url("../imagens/fundo.jpg");
     margin-left: auto;
