--- a/flask/app/templates/boi.html
+++ b/flask/app/templates/boi.html
@@ -132,6 +132,37 @@
             <input name='data1' type="date" placeholder="dd/mm/aaaa">
             <label class="titleForm"> Até:</label>
             <input name='data2' type="date" placeholder="dd/mm/aaaa">
+             <label class="titleForm"> Mês de Vencimento: </label>
+            <select class="formSelec">
+                <option>Todos</option>
+                <option>Janeiro</option>
+                <option>Fevereiro</option>
+                <option>Março</option>
+                <option>Abril</option>
+                <option>Maio</option>
+                <option>Junho</option>
+                <option>Julho</option>
+                <option>Agosto</option>
+                <option>Setembro</option>
+                <option>Outubro</option>
+                <option>Novembro</option>
+                <option>Dezembro</option>
+            </select>
+            <label class="titleForm"> Frequência: </label>
+            <select class="formSelec" id="freq" onchange="addInput()">
+                <option>Diário</option>
+                <option >Semanal</option>
+                <option >Mensal</option>
+            </select>
+             <select class="formSelec" id="semanal" style="display: none">
+                <option>Domingo</option>
+                <option>Quarta</option>
+                <option>Sábado</option>
+            </select>
+            <select class="formSelec" id="mensal" style="display: none">
+                <option>Primeiro Dia</option>
+                <option>Último Dia</option>
+            </select>
             <button type="submit" class="btnBusca">Buscar</button>   
         </form>
         <table id="ajusteTable">
@@ -165,3 +196,20 @@
 
 </body>
 </html>
+<script>
+    function addInput(){
+        var selec = document.getElementById("freq");
+        var freq = selec.options[ selec.selectedIndex ].value; 
+        if (freq == "Semanal"){
+            document.getElementById("semanal").style.display = 'inline';
+            document.getElementById("mensal").style.display = 'none';
+        }else if (freq == "Mensal"){
+            document.getElementById("mensal").style.display = 'inline';
+            document.getElementById("semanal").style.display = 'none';
+        }else{
+            document.getElementById("mensal").style.display = 'none';
+            document.getElementById("semanal").style.display = 'none';
+        }
+    }
+
+</script>
