--- a/flask/app/templates/cafe.html
+++ b/flask/app/templates/cafe.html
@@ -184,6 +184,28 @@
                 </tr>
             {% endfor %}
         </table>
+        <div id="graphDown" style="float: right">
+            <button type="button" class="myBtn" data-toggle="modal" data-target="#opGrafico" style="background-color: dodgerblue">Gráficos</button>
+            <button type="button" class="myBtn">Download</button>
+        </div>
+        
+        <div class="modal fade" id="opGrafico" role="dialog">
+            <div class="modal-dialog">
+              <!-- Modal content-->
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal">&times;</button>
+                  <h4 class="modal-title">Modal Header</h4>
+                </div>
+                <div class="modal-body">
+                  <p>Some text in the modal.</p>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+        </div>
     </div>    
 </div>
 
