--- a/flask/app/templates/cafe.html
+++ b/flask/app/templates/cafe.html
@@ -9,41 +9,10 @@
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     </head>
+{% extends 'navbar.html' %}
+{% block content %}
 <body class="corpo">
-    <!-- ----------------------Menu ------------------------- -->
-<nav id = "nb" class="navbar navbar-default" >
-  <div id = "container-navbar" class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-          <div class = "navbar-brand">
-            <h3><img src="../static/imagens/logo.png" class="logo" width="40"> CPA
-            </h3>
-        </div>
-    </div>
-   <div class="collapse navbar-collapse" id="myNavbar">
-    <ul class="nav navbar-nav navbar-left">
-        <li><a href="home.html">Home</a></li>
-       <li class="dropdown active"><a href="commodities.html">Commodities<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="boi.html">Boi Gordo</a></li>
-          <li><a class="active" href="cafe.html">Café Arabica 4/5</a></li>
-          <li><a href="milho.html">Milho</a></li>
-            <li><a href="soja.html">Soja</a></li>
-        </ul>
-        <li><a href="analytics.html">Analytics</a></li>
-      </ul>
-       <ul class="nav navbar-nav navbar-right">
-            <li class="menu-login"><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
-            <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-    </div>
-  </div>
-</nav>
-     <!-- --------------------------Header -------------------------- -->
+    <!-- --------------------------Header -------------------------- -->
     <div class="header-Img">
         <img src="../static/imagens/cafeBanner.png" style="width: 100%">
             <h1 class="commo-name">Café</h1>
@@ -186,8 +155,9 @@
         </table>
     </div>    
 </div>
-
 </body>
+{% endblock %}
+
 </html>
 <script>
     function addInput(){
