--- a/flask/app/templates/commodities.html
+++ b/flask/app/templates/commodities.html
@@ -9,40 +9,9 @@
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     </head>
+{% extends 'navbar.html' %}
+{% block content %}
 <body class="corpo">
-    <!-- ----------------------Menu ------------------------- -->
-<nav id = "nb" class="navbar navbar-default" >
-  <div id = "container-navbar" class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-          <div class = "navbar-brand">
-            <h3><img src="../static/imagens/logo.png" class="logo" width="40"> CPA
-            </h3>
-        </div>
-    </div>
-   <div class="collapse navbar-collapse" id="myNavbar">
-    <ul class="nav navbar-nav navbar-left">
-        <li><a href="home.html">Home</a></li>
-       <li class="dropdown active"><a href="commodities.html">Commodities<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-           <li><a href="boi.html">Boi Gordo</a></li>
-          <li><a href="cafe.html">Café Arabica 4/5</a></li>
-          <li><a href="milho.html">Milho</a></li>
-            <li><a href="soja.html">Soja</a></li>
-        </ul>
-        <li><a href="analytics.html">Analytics</a></li>
-      </ul>
-       <ul class="nav navbar-nav navbar-right">
-            <li class="menu-login" class="dropdown"><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
-            <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-    </div>
-  </div>
-</nav>
      <!-- --------------------------Intro -------------------------- -->
     <div class="intro">
         <div class="row">
@@ -143,4 +112,5 @@
         </div>
     </div>
 </body>
+{% endblock %}
 </html>
