--- a/flask/app/templates/home.html
+++ b/flask/app/templates/home.html
@@ -10,39 +10,8 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
     </head>
 <body>
-    <!-- ----------------------Menu ------------------------- -->
-<nav id = "nb" class="navbar navbar-default" >
-  <div id = "container-navbar" class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-        <div class = "navbar-brand">
-            <h3><img src="../static/imagens/logo.png" class="logo" width="40"> CPA
-            </h3>
-        </div>
-    </div>
-   <div class="collapse navbar-collapse" id="myNavbar">
-    <ul class="nav navbar-nav navbar-left">
-        <li class="active"><a href="home.html">Home</a></li>
-       <li class="dropdown"><a href="commodities.html">Commodities<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-           <li><a href="boi.html">Boi Gordo</a></li>
-          <li><a href="cafe.html">Café Arabica 4/5</a></li>
-          <li><a href="milho.html">Milho</a></li>
-            <li><a href="soja.html">Soja</a></li>
-        </ul>
-        <li><a href="analytics.html">Analytics</a></li>
-      </ul>
-       <ul class="nav navbar-nav navbar-right">
-           <li class="menu-login" class="dropdown"><a href="#"><span class="glyphicon glyphicon-cog"></span></a></li>
-            <li class="menu-login"><a href="login.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-        </ul>
-    </div>
-  </div>
-</nav>
+{% extends 'navbar.html' %}
+{% block content %}
     <!-- ----------------------Carrosel ------------------------- -->
      <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
@@ -127,4 +96,5 @@
         <h2>Graphics</h2>
     </div>
 </body>
+{% endblock %}
 </html
