--- a/flask/app/templates/commodities.html
+++ b/flask/app/templates/commodities.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head>
-        <title>CPA-Home</title>
-          <meta charset="utf-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1">
-          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    </head>
 {% extends 'navbar.html' %}
+    
+{% block title %}CPA-Commodities{% endblock %}
+
 {% block content %}
 <body class="corpo">
      <!-- --------------------------Intro -------------------------- -->
