--- a/flask/app/templates/login.html
+++ b/flask/app/templates/login.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-{% extends 'navbar.html' %}
-    
-    {% block title %}CPA-Login{% endblock %}
-
-{% block content %}
+<head>
+      <title>CPA - Login</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+          <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+          <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' integrity='sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU' crossorigin='anonymous'>
+          <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
+      <!--  <script type="text/javascript" src="login.js"></script>-->
+</head>
 <html lang="pt-BR">
     <body class="loginBody">
         <div class="row logoLogin" style="max-width: 100%;">
@@ -88,5 +94,4 @@
             }
         </script>
     </body>
-{% endblock %}
 </html>
